--- a/music.html
+++ b/music.html
@@ -469,7 +469,7 @@
         let audio = null;
         let isPlaying = false;
         let midiDuration = 0;
-        let colorPalette = ['#8b00ff', '#5200a3', '#ff00ff', '#a800ff', '#660099'];
+        let colorPalette = ['#ff00c1', '#9600ff', '#4900ff', '#00b8ff', '#00fff9'];
 
         function drawNotes() {
             if (!isPlaying) return;
