--- a/music.html
+++ b/music.html
@@ -519,7 +519,7 @@
                 onclick="playTrack('The%20Echos%20of%20the%20Bells.mid', 'The%20Echos%20of%20the%20Bells.mp3')">
                 The Echos of the Bells
             </div>
-            <div class="song-item" onclick="playTrack('Ethereal Completion.mid', 'Ethereal Completion.mp3')">
+            <div class="song-item" onclick="playTrack('Serene Winter Night.mid', 'Serene Winter Night.mp3')">
                 Ethereal Completion
             </div>
             <div class="song-item" onclick="playTrack('track2.mid', 'track2.mp3')">
