--- a/music.html
+++ b/music.html
@@ -520,7 +520,7 @@
                 The Echos of the Bells
             </div>
             <div class="song-item" onclick="playTrack('Serene Winter Night.mid', 'Serene Winter Night.mp3')">
-                Ethereal Completion
+                Serene Winter Night
             </div>
             <div class="song-item" onclick="playTrack('track2.mid', 'track2.mp3')">
                 Track 2
