added more music

--- a/music.html
+++ b/music.html
@@ -522,8 +522,8 @@
             <div class="song-item" onclick="playTrack('Serene Winter Night.mid', 'Serene Winter Night.mp3')">
                 Serene Winter Night
             </div>
-            <div class="song-item" onclick="playTrack('track2.mid', 'track2.mp3')">
-                Track 2
+            <div class="song-item" onclick="playTrack('A Bright Winter.mid', 'A Bright Winter.mp3')">
+                A Bright Winter
             </div>
             <div class="song-item" onclick="playTrack('track3.mid', 'track3.mp3')">
                 Track 3
