--- a/music.html
+++ b/music.html
@@ -525,8 +525,8 @@
             <div class="song-item" onclick="playTrack('A Bright Winter.mid', 'A Bright Winter.mp3')">
                 A Bright Winter
             </div>
-            <div class="song-item" onclick="playTrack('track3.mid', 'track3.mp3')">
-                Track 3
+            <div class="song-item" onclick="playTrack('Resonating Magic.mid', 'Resonating Magic.mp3')">
+                Resonating Magic
             </div>
             <p>©2024 Unlim8ted Studio Productions. All rights reserved.</p>
         </div>
