--- a/index.html
+++ b/index.html
@@ -1378,10 +1378,10 @@
         </script>
 
       -->
-        <div style="bottom:20;position:absolute;background-color:rgb(222, 184, 135);height:470px;width:100%">
-          <div style="max-width: 1200px; margin: auto;">
-
-
+      <div style="bottom:20;position:absolute;background-color:rgb(222, 184, 135);height:470px;width:100%">
+        <div style="max-width: 1200px; margin: auto; display: flex; flex-wrap: wrap; justify-content: space-between; align-items: center;">
+            <!-- Social Media Links -->
+            <div style="flex: 1; text
             <!-- Social Media Links -->
             <div style="margin-bottom: 20px;">
               <h2>Follow Us</h2>
@@ -1418,9 +1418,15 @@
             </div>
 
             <!-- Copyright -->
-            <div style="margin-top: 20px;">
-              <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
-            </div>
+        
+
+              <div style="margin-top: 20px;">
+                <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+                <p>
+                  <a href="/tos">Terms of Service</a> | 
+                  <a href="/privacy">Privacy Policy</a>
+                </p>
+              </div>
           </div>
         </div>
       </div>
