--- a/music.html
+++ b/music.html
@@ -528,6 +528,9 @@
             <div class="song-item" onclick="playTrack('Resonating Magic.mid', 'Resonating Magic.mp3')">
                 Resonating Magic
             </div>
+            <div class="song-item" onclick="playTrack('Blue Lasers.mid', 'Blue Lasers.mp3')">
+                Resonating Magic
+            </div>
             <p>©2024 Unlim8ted Studio Productions. All rights reserved.</p>
         </div>
 
