update name agian

--- a/music.html
+++ b/music.html
@@ -529,7 +529,7 @@
                 Resonating Magic
             </div>
             <div class="song-item" onclick="playTrack('Blue Lasers.mid', 'Blue Lasers.mp3')">
-                Blue Lasers
+                Neon Lasers
             </div>
             <p>©2024 Unlim8ted Studio Productions. All rights reserved.</p>
         </div>
