make dark mode the default home page

--- a/podcasts.html
+++ b/podcasts.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unlim8ted Podcasts</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta name="description"content="Unlim8ted Podcasts. Funny informational podcasts. Always free, no signup required. Powered by Unlim8ted Studio Productions."/>
   <style media="screen" type="text/css">
     .layer1_class {
