--- a/index.html
+++ b/index.html
@@ -759,8 +759,7 @@
   <a class="cart-btn" href="cart" style="font-size: larger; position: absolute; top: 30px">🛍️</a>
 
 
-  <!-- Dark Mode Content (Initially Hidden) -->
-  <div id="home" style="display: none;">
+  <div id="home" style="display: block;">
     <style>
       /* Base Styling */
       * {
