improve sign-in page visuals

--- a/sign-in.html
+++ b/sign-in.html
@@ -8,37 +8,83 @@
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
+      font-family: 'Arial', sans-serif;
+      background: radial-gradient(circle at center, #0f0c29, #302b63, #24243e);
       margin: 0;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      overflow: hidden;
+      color: #e0e0e0;
+    }
+
+    .background {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      z-index: -1;
+    }
+
+    .background span {
+      position: absolute;
+      width: 50px;
+      height: 50px;
+      background: linear-gradient(45deg, #00ff99, #ff0077);
+      opacity: 0.7;
+      filter: blur(8px);
+      animation: float 6s infinite ease-in-out;
+      border-radius: 50%;
+    }
+
+    @keyframes float {
+      0%, 100% {
+        transform: translateY(0) translateX(0);
+      }
+      50% {
+        transform: translateY(-40px) translateX(20px);
+      }
     }
 
     .container {
       text-align: center;
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      background: rgba(30, 30, 30, 0.9);
+      border-radius: 15px;
+      box-shadow: 0 10px 30px rgba(0, 255, 153, 0.3);
       padding: 2rem;
       max-width: 400px;
     }
 
     .logo {
-      font-size: 1.5rem;
+      font-size: 2rem;
       font-weight: bold;
-      color: #4285f4;
+      color: #00ff99;
       margin-bottom: 1rem;
+      text-shadow: 0 0 10px #00ff99;
     }
 
     .button-container {
       margin-top: 2rem;
     }
+
+    p {
+      font-size: 1rem;
+      color: #d0d0d0;
+    }
   </style>
 </head>
 <body>
+  <!-- Animated background -->
+  <div class="background">
+    <span style="top: 20%; left: 10%; animation-delay: 0s;"></span>
+    <span style="top: 40%; left: 70%; animation-delay: 2s;"></span>
+    <span style="top: 70%; left: 30%; animation-delay: 4s;"></span>
+    <span style="top: 50%; left: 90%; animation-delay: 1.5s;"></span>
+    <span style="top: 80%; left: 50%; animation-delay: 3s;"></span>
+  </div>
+
+  <!-- Sign-in container -->
   <div class="container">
     <div class="logo">Google</div>
     <p>Sign in to continue to your account</p>
