added info on sign in page

--- a/sign-in.html
+++ b/sign-in.html
@@ -72,6 +72,22 @@
       font-size: 1rem;
       color: #d0d0d0;
     }
+
+    .info {
+      margin-top: 1.5rem;
+      font-size: 0.9rem;
+      color: #b0b0b0;
+    }
+
+    .info a {
+      color: #00ff99;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .info a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -103,6 +119,10 @@
            data-size="large"
            data-logo_alignment="left">
       </div>
+    </div>
+    <div class="info">
+      <p>An account is needed to comment, rate products, and add things to your cart, but it is not required.</p>
+      <p>If you'd prefer not to create an account, you can visit our <a href="#products">Products</a> or <a href="#about">About Us</a> sections.</p>
     </div>
   </div>
 
