--- a/sign-in.html
+++ b/sign-in.html
@@ -130,7 +130,7 @@
     function handleCredentialResponse(response) {
       console.log("Encoded JWT ID token: " + response.credential);
       // Redirect to the products section
-      window.location.href = 'unlim8ted.com#products';
+      window.location.href = 'https://unlim8ted.com#products';
     }
   </script>
 </body>
